--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,38 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+while True:
+    cpf = input('Digite seu cpf apenas com 11 numeros : ')
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+    if not cpf.isnumeric():
+        print('Digite seu cpf apenas com numeros !!!!!!!! ')
+        continue
+    elif len(cpf) < 11 or len(cpf) > 11:
+        print('Digite seu cpf apenas com 11 numeros !!!!')
+        continue
+    else:
+        n1, n2, n3, n4, n5, n6, n7, n8, n9, n10, n11 = list(cpf) #separando cada algorismo da string cpf
+        n1 = int(n1)               #transform
+        n2 = int(n2)
+        n3 = int(n3)
+        n4 = int(n4)
+        n5 = int(n5)
+        n6 = int(n6)
+        n7 = int(n7)
+        n8 = int(n8)
+        n9 = int(n9)
+        n10 = int(n10)
+        n11 = int(n11)
+        x = (n1 * 10 + n2 * 9 + n3 * 8 + n4 * 7 + n5 * 6 + n6 * 5 + n7 * 4 + n8 *3 + n9 * 2 ) #calcular o digito 1
+        d1 = 11 - (x % 11)
+    if d1 >= 9:                      #verificar o digito 1
+        z = 0
+    else:
+        print('CPF INVALIDO')
+        exit()
+    if z == 0:                      #checa o digito 2
+        d2 = (n1 * 11 + n2 * 10 + n3 * 9 + n4 * 8 + n5 * 7 + n6 * 6 + n7 * 5 + n8 * 4 + n9 * 3 + d1 * 2)
+        Ultimo_digito = 11 - (d2 % 11)
+        break
+if Ultimo_digito == n11: #finalizando se é valido ou não
+    print('CPF VALIDADO')
+    exit()
+elif Ultimo_digito != n11:
+    print('CPF INVALIDO')
